publish 1st version